5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1636_2723.log
== TEST (2019-04-04 22:33:32) 
-- CODE:
num = float(input(" "))
num2 = float(input(" "))
num3 = float(input(" "))
if(num > num2 > num3):
	print(num)
if(num < num2 < num3):
	print(num3)
if(num > num2 < num3):
	print(max num, num3)
if(num < num2 > num3):
	print(num2)

-- ERROR:
File "XXXX", line 9
    print(max num, num3)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:33:49) 
-- CODE:
num = float(input(" "))
num2 = float(input(" "))
num3 = float(input(" "))
if(num > num2 > num3):
	print(num)
if(num < num2 < num3):
	print(num3)
if(num > num2 < num3):
	print(max(num, num3)
if(num < num2 > num3):
	print(num2)

-- ERROR:
File "XXXX", line 10
    if(num < num2 > num3):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:41:24) 
-- CODE:
# Entradas
num = float(input(" "))
num2 = float(input(" "))
num3 = float(input(" "))
# Condicoes
if (num > num2 and num > num3):
	maior = num
if (num2 > num and num2 > num3):
	maior = num2
if (num3 > num and num3 > num2):
	maior = num3
# Saida
print(maior)

-- OUTPUT:
788.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:42:07) 
-- CODE:
# Entradas
num = float(input("Numero 1: "))
num2 = float(input("Numero 2: "))
num3 = float(input("Numero 3: "))
# Condicoes
if (num > num2 and num > num3):
	maior = num
if (num2 > num and num2 > num3):
	maior = num2
if (num3 > num and num3 > num2):
	maior = num3
# Saida
print(maior)

-- OUTPUT:
788.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:42:19) 
-- CODE:
# Entradas
num = float(input("Numero 1: "))
num2 = float(input("Numero 2: "))
num3 = float(input("Numero 3: "))
# Condicoes
if (num > num2 and num > num3):
	maior = num
if (num2 > num and num2 > num3):
	maior = num2
if (num3 > num and num3 > num2):
	maior = num3
# Saida
print(maior)

-- EXECUTION TIME:
0.136603
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:53:44) 
-- CODE:
# Entradas
num = int(input("Numero 1: "))
num2 = int(input("Numero 2: "))
num3 = int(input("Numero 3: "))
# Condicoes
if (num > num2 and num > num3):
	maior = num
if (num2 > num and num2 > num3):
	maior = num2
if (num3 > num and num3 > num2):
	maior = num3
# Saida
print(maior)

-- EXECUTION TIME:
0.265717
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
